--- a/react/course-goal-project/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/react/course-goal-project/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,12 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  border-color: red;
+  background: rosybrown;
+}
+
+.form-control.invalid label {
+  color: red;
+}
